# Minesweeper

./: .gitignore  CMakeLists.txt  README.md
include/: Cell.h
src/: Cell.cpp  main.cpp
